[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { git = "https://github.com/dymchenkko/risc0.git", branch = "feat/cargo-test"}

[dependencies]
risc0-zkvm-guest = { git = "https://github.com/dymchenkko/risc0.git", branch = "feat/cargo-test"}
risc0-zkvm-platform = { git = "https://github.com/dymchenkko/risc0.git", branch = "feat/cargo-test"}